--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-*/__pycache__
+*__pycache__
 /.vscode
 /env
 app/data_parser/loaded_data/*.csv
 app/data_parser/ml_data/*.csv
 Dockerfile
 .dockerignore
+test.py
