--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,13 @@ idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+numpy==1.20.3
 pandas==1.2.4
+plotly==4.14.3
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+retrying==1.3.3
 six==1.16.0
 urllib3==1.26.4
 Werkzeug==2.0.1
